<resources>
    <string name="app_name">Wireless</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="refresh">Refresh</string>
    <string name="home">Home</string>

    <string name="action_select_user">Select User</string>
    <string name="switch_user_text">Switch To</string>
    <string name="authorize_string">Authorize</string>
    <string name="save_text">Save</string>
    <string name="add_user_string">Create User</string>
    <string name="edit_user_string">Edit User</string>
    <string name="associate_decices">Associate Devices</string>
</resources>
