<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/home"
        android:orderInCategory="0"
        android:showAsAction="always" />
    <item android:id="@+id/refresh_server"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/refresh"
        android:showAsAction="always" />
    <item android:id="@+id/config_server"
        android:title="Config Server"
        android:showAsAction="never" />
    <item android:id="@+id/associate" android:title="@string/associate_decices"
        android:showAsAction="never" />
    <item android:id="@+id/select_user" android:title="@string/action_select_user"
        android:orderInCategory="100" android:showAsAction="never" />

</menu>