<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jaykhon.wireless.wireless.authorize.UserSelectActivity">


    <RelativeLayout
        android:layout_width="fill_parent"

        android:layout_height="wrap_content">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/users_spinner" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_user_text"
            android:id="@+id/switchButton"
            android:layout_below="@+id/users_spinner"
            android:layout_alignParentRight="true" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"/>

        <ToggleButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switchButton"
            android:text="Add User"
            android:checked="false"
            android:textOn="Cancel"
            android:textOff="Add User"
            android:id="@+id/toggleButton" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/new_user_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/new_user_id"
            android:inputType="text"
            android:hint="id" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/new_user_name"
            android:inputType="text"
            android:hint="Name" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authorize_string"
            android:id="@+id/new_user_authorized"
            android:checked="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_text"
            android:id="@+id/button"
            android:layout_gravity="right" />
    </LinearLayout>

</LinearLayout>



